fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5027,7 +5027,10 @@ a img {
 }
 
 .user-projects {
-    margin: 20px auto
+    margin: auto;
+    width: 50%;
+    border: 3px solid blue;
+    padding: 10px;
 }
 
 .user-projects img {
